crates/xlate/tests/snapshots/golden_matrix__state_encrypted_capture__o4-mini__20260910__responses_to_chat__openai_compatible.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "llama-x",
  "messages": [
    {
      "role": "user",
      "content": "What is 17*23? Think, then answer with just the number."
    }
  ],
  "max_tokens": 256
}
--- headers ---
upstream_streams: false
--- degraded ---
reasoning=dropped;store=dropped;include=dropped
